Fix padding of register/login menu and align PKP brand with page content
Issue: documentacao-e-tarefas/scielo#213

--- a/styles/footer.less
+++ b/styles/footer.less
@@ -36,13 +36,13 @@
 // OJS brand images in footer
 .pkp_brand_footer {
 	margin: 0px 0 @triple;
+	padding: 0px @triple;
 	font-size: .8em;
 	.pkp_helpers_clear();
-	padding: 0;
 
 	.container{
 		padding: 0;
-		display: flex;
+		max-width: 100%;
 	 }
 
 	.col-md-2 {
