--- a/styles/head.less
+++ b/styles/head.less
@@ -529,7 +529,7 @@
 		}
 
 		a {
-			padding: @half 0;
+			padding: @half @base @half 0;
 			line-height: @line-sml;
 		}
 
